--- a/index.html
+++ b/index.html
@@ -166,34 +166,46 @@
             <div class="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item">
-                        <img src="Img/p_4.png" alt="Project 4">
+                        <a href="https://github.com/Meelan-Thapa/coca-cola-single-product"><img src="Img/Coca-cola.png" alt="Coca-Cola Single Product Website"></a>
+                        <h3>Coca-Cola Single Product Website</h3>
+                        <p>WordPress & Elementor</p>
+                        <p>Custom WordPress site for a single Coca-Cola product, built with Elementor page builder</p>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="https://github.com/Meelan-Thapa/project_4"><img src="Img/p_4.png" alt="Project 4"></a>
                         <h3>Project 4</h3>
-                        <p>HTML, CSS & SaSS</p>
-                        <p>Responsive, modern, sleek, minimalist design</p>
+                        <p>HTML, SCSS & Sass</p>
+                        <p>Responsive website with modern design and minimalist aesthetics</p>
                     </div>
                     <div class="carousel-item">
-                        <img src="Img/p_5.png" alt="Project 5">
+                        <a href="https://github.com/Meelan-Thapa/project_5" target="_blank"><img src="Img/p_5.png" alt="Project 5"></a>
                         <h3>Project 5</h3>
-                        <p>HTML, CSS & SaSS</p>
-                        <p>Dynamic, interactive, colorful, user-friendly interface</p>
+                        <p>HTML, SCSS & Sass</p>
+                        <p>Interactive landing page with custom animations and responsive layout</p>
+                    </div>ro
+                    <div class="carousel-item">
+                        <a href="https://github.com/Meelan-Thapa/cityscape-infrastructure" target="_blank"><img src="Img/coorporate-wp-e.png" alt="Cityscape Infrastructure Website"></a>
+                        <h3>Cityscape Infrastructure</h3>
+                        <p>WordPress & Elementor</p>
+                        <p>Corporate website for a city infrastructure company, built with WordPress and Elementor page builder</p>
                     </div>
                     <div class="carousel-item">
-                        <img src="Img/p_6.png" alt="Project 6">
+                        <a href="https://github.com/Meelan-Thapa/project_6" target="_blank"><img src="Img/p_6.png" alt="Project 6"></a>
                         <h3>Project 6</h3>
-                        <p>HTML, CSS & SaSS</p>
-                        <p>Elegant, professional, clean, corporate website</p>
+                        <p>HTML, SCSS & Sass</p>
+                        <p>Professional business website with clean design and smooth transitions</p>
                     </div>
                     <div class="carousel-item">
-                        <img src="Img/p_7.png" alt="Project 7">
+                        <a href="https://github.com/Meelan-Thapa/project_7" target="_blank"><img src="Img/p_7.png" alt="Project 7"></a>
                         <h3>Project 7</h3>
-                        <p>HTML, CSS & SaSS</p>
-                        <p>Creative, bold, innovative, artistic portfolio</p>
+                        <p>HTML, SCSS & Sass</p>
+                        <p>Creative portfolio showcasing projects with grid layout and hover effects</p>
                     </div>
                     <div class="carousel-item">
-                        <img src="Img/p_8.png" alt="Project 8">
+                        <a href="https://github.com/Meelan-Thapa/project_7" target="_blank"><img src="Img/p_8.png" alt="Project 8"></a>
                         <h3>Project 8</h3>
-                        <p>HTML, CSS & SaSS</p>
-                        <p>Efficient, functional, intuitive, mobile-first application</p>
+                        <p>HTML, SCSS & Sass</p>
+                        <p>Mobile-first web application with responsive design and custom components</p>
                     </div>
                 </div>
                 <button class="carousel-prev">&lt;</button>
